--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.12",
     "@astrojs/check": "^0.9.4",
-    "typescript": "^5.6.3"
+    "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/vercel": "^7.8.1",
+    "@astrojs/vue": "^4.5.2",
+    "@nanostores/i18n": "^0.12.2",
+    "@nanostores/persistent": "^0.10.2",
+    "@nanostores/vue": "^0.10.0",
+    "astro": "^4.15.12",
+    "fluid-tailwind": "^1.0.3",
+    "nanostores": "^0.11.3",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.3",
+    "vue": "^3.5.11"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.8"
   }
 }
